--- a/_includes/burndown.html
+++ b/_includes/burndown.html
@@ -1,7 +1,7 @@
 <h3><i class="fa fa-signal fa-fw"></i> Burndown</h3>
-<script type="text/javascript" src="//ajax.googleapis.com/ajax/static/modules/gviz/1.0/chart.js">
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/static/modules/gviz/1.0/chart.js">
 {
-    "dataSourceUrl": "//docs.google.com/spreadsheet/tq?key=0AqJbzJ2ZC3PodGxRZ084bWkwY01sUFN5SzB4ZkJvbHc&transpose=1&headers=1&range=G19%3AQ22&gid=93&pub=1",
+    "dataSourceUrl": "https://docs.google.com/spreadsheet/tq?key=0AqJbzJ2ZC3PodGxRZ084bWkwY01sUFN5SzB4ZkJvbHc&transpose=1&headers=1&range=G19%3AQ22&gid=93&pub=1",
     "options": {
         "displayAnnotations": true,
         "showTip": true,
