Add burndown sprint 2

--- a/_includes/burndown.html
+++ b/_includes/burndown.html
@@ -1,58 +1,2 @@
 <h3><i class="fa fa-signal fa-fw"></i> Burndown</h3>
-<script type="text/javascript" src="//ajax.googleapis.com/ajax/static/modules/gviz/1.0/chart.js">
-{
-    "dataSourceUrl": "//docs.google.com/spreadsheet/tq?key=0AqJbzJ2ZC3PodGxRZ084bWkwY01sUFN5SzB4ZkJvbHc&transpose=1&headers=1&range=G19%3AQ22&gid=93&pub=1",
-    "options": {
-        "displayAnnotations": true,
-        "showTip": true,
-        "curveType": "",
-        "dataMode": "markers",
-        "maxAlternation": 1,
-        "animation": {
-            "duration": 0
-        },
-        "pointSize": "0",
-        "colors": ["#3366CC", "#DC3912", "#FF9900", "#109618", "#990099", "#0099C6", "#DD4477", "#66AA00", "#B82E2E", "#316395"],
-        "lineWidth": "2",
-        "labelPosition": "right",
-        "is3D": false,
-        "hAxis": {
-            "useFormatFromData": true,
-            "viewWindowMode": "pretty",
-            "viewWindow": {}
-        },
-        "wmode": "opaque",
-        "vAxes": [{
-            "useFormatFromData": true,
-            "title": null,
-            "minValue": null,
-            "viewWindowMode": "pretty",
-            "viewWindow": {
-                "min": null,
-                "max": null
-            },
-            "maxValue": null
-        }, {
-            "useFormatFromData": true,
-            "viewWindowMode": "pretty",
-            "viewWindow": {}
-        }],
-        "booleanRole": "certainty",
-        "title": "",
-        "domainAxis": {
-            "direction": 1
-        },
-        "legend": "bottom",
-        "useFirstColumnAsDomain": true,
-        "allowCollapse": true,
-        "mapType": "hybrid",
-        "isStacked": false,
-        "width": 692,
-        "height": 348
-    },
-    "state": {},
-    "isDefaultVisualization": true,
-    "chartType": "LineChart",
-    "chartName": "Chart 1"
-}
-</script>
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/static/modules/gviz/1.0/chart.js"> {"dataSourceUrl":"//docs.google.com/spreadsheet/tq?key=0AqJbzJ2ZC3PodGxRZ084bWkwY01sUFN5SzB4ZkJvbHc&transpose=1&headers=1&range=G16%3AQ19&gid=93&pub=1","options":{"displayAnnotations":true,"showTip":true,"curveType":"","dataMode":"markers","maxAlternation":1,"animation":{"duration":0},"pointSize":"0","colors":["#3366CC","#DC3912","#FF9900","#109618","#990099","#0099C6","#DD4477","#66AA00","#B82E2E","#316395"],"lineWidth":"2","labelPosition":"right","is3D":false,"hAxis":{"useFormatFromData":true,"viewWindowMode":"pretty","viewWindow":{}},"wmode":"opaque","vAxes":[{"useFormatFromData":true,"title":null,"minValue":null,"viewWindowMode":"pretty","viewWindow":{"min":null,"max":null},"maxValue":null},{"useFormatFromData":true,"viewWindowMode":"pretty","viewWindow":{}}],"booleanRole":"certainty","title":"","domainAxis":{"direction":1},"legend":"bottom","useFirstColumnAsDomain":true,"allowCollapse":true,"mapType":"hybrid","isStacked":false,"width":692,"height":348},"state":{},"isDefaultVisualization":true,"chartType":"LineChart","chartName":"Chart 1"} </script>
