--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -13,6 +13,7 @@
 		<div id="navbar-collapse-content" class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
 				<li id="navbar-home"><a href="/"><i class="fa fa-home fa-fw"></i> Home</a></li>
+				<li id="navbar-progress"><a href="/progress"><i class="fa fa-signal fa-fw"></i> Progress</a></li>
 				<li id="navbar-projects" class="dropdown">
 					<a class="dropdown-toggle" data-toggle="dropdown" href=""><i class="fa fa-edit fa-fw"></i> Edit <b class="caret"></b></a>
 					<ul class="dropdown-menu">
